// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreItem renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={false}
    style={
      Array [
        Object {
          "borderRadius": 4,
          "height": 234,
          "overflow": "hidden",
          "width": 234,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="cover"
        source={
          Object {
            "uri": "url",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "GothamPro-Bold",
              "fontSize": 16,
              "lineHeight": 20,
              "position": "absolute",
              "textAlign": "center",
            },
          ]
        }
      >
        title
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SelectableGenreItem renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    style={
      Array [
        Object {
          "borderRadius": 4,
          "height": 234,
          "overflow": "hidden",
          "width": 234,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="cover"
        source={
          Object {
            "uri": "url",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/genres/genre_inactive.png",
        }
      }
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "GothamPro-Bold",
              "fontSize": 16,
              "lineHeight": 20,
              "position": "absolute",
              "textAlign": "center",
            },
          ]
        }
      >
        title
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SelectableGenreItem renders correctly in selected state 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    style={
      Array [
        Object {
          "borderRadius": 4,
          "height": 234,
          "overflow": "hidden",
          "width": 234,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="cover"
        source={
          Object {
            "uri": "url",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <Image
      isSelected={true}
      source={
        Object {
          "testUri": "../../../src/assets/images/genres/genre_active.png",
        }
      }
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "GothamPro-Bold",
              "fontSize": 16,
              "lineHeight": 20,
              "position": "absolute",
              "textAlign": "center",
            },
          ]
        }
      >
        title
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SelectableGenreItem renders correctly in unselected state 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    style={
      Array [
        Object {
          "borderRadius": 4,
          "height": 234,
          "overflow": "hidden",
          "width": 234,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="cover"
        source={
          Object {
            "uri": "url",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <Image
      isSelected={false}
      source={
        Object {
          "testUri": "../../../src/assets/images/genres/genre_inactive.png",
        }
      }
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "GothamPro-Bold",
              "fontSize": 16,
              "lineHeight": 20,
              "position": "absolute",
              "textAlign": "center",
            },
          ]
        }
      >
        title
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
